prepare web-bundler integration & refactor ui